Archive2/e0/5c636ebe48eaf3/output
main.cpp:8:13: error: no matching function for call to 'foo'
int main(){ foo<a<b>(); }
            ^~~~~~~~
main.cpp:4:6: note: candidate template ignored: invalid explicitly-specified argument for 1st template parameter
void foo(){ };
     ^
1 error generated.
